<resources>
    <string name="nombreAPP">Camiseta Futbolera</string>
    <string name="minombre">Stiven Nicolás Gamba Robayo</string>
    <string name="registro">Regístrate</string>
    <string name="comienza">Comienza</string>
    <string name="ingresa">Ingresar</string>
    <string name="recuperaContrana">Recupera Tu Contraseña</string>
    <string name="ingresaGoogle">Ingresa con Google</string>
    <string name="noCuenta">¿No tienes cuenta?</string>
    <string name="bienvenidaHome">Inicia una nueva aventura con Tienda Deportiva y descubre una nueva forma de ver el mundo</string>
    <string name="bienvenidaLogin">La aventura está por iniciar, por favor inicia sesión</string>
    <string name="TYC">(*) Al registrarme en CAMISETA FUTBOLERA acepto los <u><font color='#00FFFF'>términos y condiciones</font>
    </u> que puedes ver en nuestro web site.</string>
    <string name="iniciarSesion">¿Ya estas registrado en Movi? <u><font color='#00FFFF'>inicia sesión aquí</font>
    </u>.</string>
    <string name="inicio">Inicio</string>
    <string name="bienvenido">Bienvenido a Movi</string>
    <string name="inicioMenu">inicio</string>
    <string name="productosMenu">Productos</string>
    <string name="pantalla_de_inicio">pantalla de inicio</string>
    <string name="pantalla_de_productos">pantalla de productos</string>
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">cerrar</string>
    <string name="cienaños_colomnbia">Colombia edición 100 años</string>
    <string name="txtDescripcionProducto">Edición especial 100 años Colombia tallas: S - M - L - XL</string>
    <string name="CantidadProducto">Cantidad de unidades: 39</string>
    <string name="precio">$80.000 COP</string>
    <string name="valor">valor</string>
    <string name="agregar_al_carrito">Agregar Al carrito</string>
    <string name="editar">Editar</string>
    <string name="nombre">Nombre:</string>
    <string name="apellidos">Apellidos</string>
    <string name="correo">Correo:</string>
    <string name="telefono">Telefono:</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="guardar">Guardar</string>
    <string name="camisetas">CAMISETAS</string>
    <string name="explora_cantidad">Explora mas de 59 referecias disponibles</string>
    <string name="guayos">GUAYOS</string>
    <string name="sudaderas">SUDADERAS</string>
    <string name="espinilleras">ESPINILLERAS</string>
    <string name="balones">BALONES</string>
    <string name="medias">MEDIAS</string>
    <string name="hola">Hola mundo</string>
    <string name="categorias">Categorias</string>
    <string name="carrito">Carrito</string>
    <string name="pagar">Pagar</string>
    <string name="total">Total:</string>
    <string name="perfil">Perfil</string>
    <string name="textLogin">Inicias sesión para comprar, vender\ny tener una mejor experiencia</string>
    <string name="correo_o_tel_fono">Correo o teléfono</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="olvidaste_tu_contrasena">¿Olvidaste tu contraseña?</string>
    <string name="recuperala_aqui">Recupérala aquí</string>
    <string name="inicia_sesi_n_con_google">Inicia sesión con Google</string>
    <string name="a_n_no_tienes_una_cuenta">¿Aún no tienes una cuenta?</string>
    <string name="reg_strate_aqu">Regístrate aquí</string>
    <string name="buscar">Buscar...</string>
    <string name="correo_contacto">camisetafutboleraCOL@gmail.com</string>
    <string name="celular_contacto">+57-311 817 6454</string>
    <string name="direccion_contacto">Cra. XX Este # xx-xx Barrio XX Bogotá, Colombia</string>
    <string name="datos_perfil">Datos del perfil</string>
    <string name="nombre_perfil">Nombre del perfil</string>
    <string name="informacion_de_la_cuenta">Información de la cuenta</string>
    <string name="medios_de_pago">Medios de pago</string>
    <string name="direccion_de_entrega">Dirección de entrega</string>
    <string name="delivery_address">Dg 64 No. 1-55</string>
    <string name="seguridad">Seguridad</string>
    <string name="escribe_el_correo_a_la_cuenta_asociada_te_enviaremos_un_codigo_de_verificaci_n">Escribe el correo a la cuenta asociada, te enviaremos un codigo de verificación</string>
    <string name="correoRE">Correo *</string>
    <string name="enviar_c_digo">Enviar código</string>
    <string name="ya_tienes_una_cuenta">¿Ya tienes una cuenta?</string>
    <string name="registrate_con_tus_datos_personales_recuerda_que_todos_los_datos_marcados_con_son_obligatorios">Registrate con tus datos personales, recuerda que todos los datos marcados con (*) son obligatorios</string>
    <string name="nombreRE">Nombre *</string>
    <string name="apellidoRE">Apellido *</string>
    <string name="tel_fonoRE">Teléfono *</string>
    <string name="confirmar_correoRE">Confirmar correo *</string>
    <string name="contrase_a">Contraseña *</string>
    <string name="confirmar_contrase_a">Confirmar contraseña *</string>
    <string name="digita_el_codigo_de_6_digitos_que_hemos_enviado_al_correo_electronico_asociado">Digita el codigo de 6 digitos, que hemos enviado al correo electronico asociado.</string>
    <string name="verificar">Verificar</string>
    <string name="puedes_solicitar_un_codigo_nuevo_en">Puedes solicitar un codigo nuevo en:</string>
    <string name="solicitar_nuevo_c_digo">Solicitar nuevo código</string>
    <string name="default_web_client_id">registro!</string>
    <string name="mi_informaci_n_personal">Mi información personal</string>
    <string name="privacidad">Privacidad</string>
    <string name="a_adir_n_mero_de_celular">Añadir número de celular</string>
    <string name="agrega_una_direcci_n_de_entrega">Agrega una dirección de entrega</string>
    <string name="no_disponible">No disponible</string>
    <string name="bogot">Bogotá</string>
    <string name="correo_camiseta_futbolera">camiseta.futboleracol@gmail.com</string>
    <string name="telefono_camiseta_futbolera">+57 311 817 6454</string>
    <string name="direccion_camiseta_futbolera">Avenica Cra. 68 #68 - 20</string>
    <string name="av_68">AV. 68</string>
    <string name="cc_gran_estaci_n">CC. Gran estación</string>
    <string name="cc_tunal">CC. tunal</string>
    <string name="volver_al_inicio">Volver al inicio</string>
    <string name="crea_una_nueva_contrase_a_y_confirmala">Crea una nueva contraseña y confirmala</string>
    <string name="cambiar_contrase_a">Cambiar Contraseña</string>
    <string name="nueva_contrase_a">Nueva contraseña</string>
    <string name="confirmar_nueva_contrase_a">Confirmar nueva contraseña</string>
    <string name="a_adir">Añadir</string>
    <string name="millonarios_local_2025">Millonarios Local 2025</string>
    <string name="mfc_fpc_jugador">MFC | FPC | Jugador</string>
    <string name="millonarios_visitante_2024_25">Millonarios Visitante 2024-25</string>
    <string name="millonarios_tercera_2024_25">Millonarios Tercera 2024-25</string>
    <string name="millonarios_fleece_2024_25">Millonarios Fleece 2024-25</string>

</resources>