<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:srcCompat="@drawable/colombia" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10sp"
        android:text="@string/cienaños_colomnbia"
        android:textColor="@color/negro"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10sp"
        android:text="@string/txtDescripcionProducto"
        android:textColor="@color/negro"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:paddingTop="10sp"
        android:text="@string/CantidadProducto"
        android:textColor="@color/negro"
        android:textSize="15sp"
        android:paddingLeft="22sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10sp"
        android:text="@string/valor"
        android:textColor="@color/negro"
        android:paddingLeft="22sp"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/precio"
        android:textColor="@color/verdeClaro"
        android:textSize="30sp"
        android:paddingLeft="22sp"
        android:paddingBottom="30sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btn_agregarCarrito"
        android:layout_width="249dp"
        android:layout_height="54dp"
        android:backgroundTint="@color/verdeClaro"
        android:paddingTop="10sp"
        android:text="@string/agregar_al_carrito"
        android:textColor="@color/negro"
        android:textSize="20sp"
        app:cornerRadius="10sp"
        app:strokeColor="@color/negro"
        app:strokeWidth="2sp" />



</LinearLayout>